# ultrakill-no-damage-website

./: .gitignore  Cargo.toml  flake.nix  index.html  rust-toolchain.toml
.github/workflows/: gh-pages-deploy.yml
assets/: run_data.csv  run_data.toml
src/: app.rs  components.rs  gamedata.rs  lib.rs  main.rs
src/components/: Leaderboard.rs  leaderboard.rs
src/gamedata/: deserialization.rs
style/: main.scss
